# SAGE-SLAM

./: .gitignore  Dockerfile  README.md
representation/: Dockerfile  training.py
representation/configs/: export.json  test_code.json  training.json
representation/datasets/: __init__.py  endoscopy_dataset.py
representation/losses/: DepthLoss.py  DescLoss.py  FlowLoss.py  __init__.py
representation/models/: __init__.py  depth_network.py  diff_ba.py  discriminator.py  feature_matcher.py  feature_network.py  partial_modules.py
representation/pretrained/: ba_model.pt  disc_model.pt
representation/scripts/: generate_reconstruction_fly_through.py  slam_run_with_hdf5_dataset.py
representation/utils/: __init__.py  logger.py  network.py  processing.py  scheduler.py  visualization.py
system/: CMakeLists.txt
system/configs/: bow_voc.flags  slam_run.flags
system/sources/: CMakeLists.txt
system/sources/common/: CMakeLists.txt  camera_pyramid.h  display_utils.cpp  display_utils.h  indexed_map.h  interp.cpp  interp.h  logutils.cpp  logutils.h  pinhole_camera.h  pinhole_camera_impl.h  timing.cpp  timing.h
system/sources/core/: CMakeLists.txt  deepfactors.cpp  deepfactors.h  deepfactors_options.cpp  deepfactors_options.h
system/sources/core/gtsam/: code_factor.cpp  code_factor.h  geometric_factor.cpp  geometric_factor.h  gtsam_traits.h  gtsam_utils.h  loop_mg_factor.cpp  loop_mg_factor.h  match_geometry_factor.cpp  match_geometry_factor.h  photometric_factor.cpp  photometric_factor.h  pose_factor.cpp  pose_factor.h  rel_pose_factor.cpp  rel_pose_factor.h  rel_pose_scale_factor.cpp  rel_pose_scale_factor.h  reprojection_factor.cpp  reprojection_factor.h  scale_factor.cpp  scale_factor.h
system/sources/core/mapping/: df_work.cpp  df_work.h  frame.h  keyframe.h  keyframe_map.h  mapper.cpp  mapper.h  mapping_utils.cpp  mapping_utils.h  work.cpp  work.h  work_manager.cpp  work_manager.h
system/sources/core/network/: code_depth_network.cpp  code_depth_network.h  feature_network.cpp  feature_network.h
system/sources/core/system/: camera_tracker.cpp  camera_tracker.h  dl_descriptor.cpp  dl_descriptor.h  loop_detector.cpp  loop_detector.h  tensor_vocabulary.cpp  tensor_vocabulary.h
system/sources/cuda/: CMakeLists.txt  geometric_factor_kernels.cpp  geometric_factor_kernels.h  match_geometry_factor_kernels.cpp  match_geometry_factor_kernels.h  photometric_factor_kernels.cpp  photometric_factor_kernels.h  reprojection_factor_kernels.cpp  reprojection_factor_kernels.h
system/sources/demo/: CMakeLists.txt  live_demo.cpp  live_demo.h  main.cpp
system/sources/drivers/: CMakeLists.txt  camera_interface.h  camera_interface_factory.cpp  camera_interface_factory.h
system/sources/drivers/camera/: live_interface.h  openni_interface.cpp  openni_interface.h  pointgrey_interface.cpp  pointgrey_interface.h
system/sources/drivers/dataset/: dataset_interface.h  file_interface.cpp  file_interface.h  hdf5_interface.cpp  hdf5_interface.h  icl_interface.cpp  icl_interface.h  scannet_interface.cpp  scannet_interface.h  tum_interface.cpp  tum_interface.h
system/sources/gui/: CMakeLists.txt  keyframe_renderer.cpp  keyframe_renderer.h  visualizer.cpp  visualizer.h
system/sources/gui/shaders/: drawkf.geom
system/sources/tools/: CMakeLists.txt  result_viewer.cpp  voc_builder.cpp
